# rndr

./: CMakeLists.txt  README.md  run.sh
src/: benchmark.cc  benchmark.h  drawing.cc  drawing.h  framebuffer.cc  framebuffer.h  main.cc  math.cc  math.h  mesh.cc  mesh.h  transform.cc  transform.h  wavefront.cc  wavefront.h  window.cc  window.h
